# lab

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BigInt/: CMakeLists.txt  bigint.cpp  bigint.h
